# polars_counter

./: .gitignore  Cargo.toml  Makefile  README.md  create_pickles.py  pyproject.toml  run.py  run_polars_expr.py
.cargo/: config.toml
polars_counter/: __init__.py  _internal.pyi
src/: expressions.rs  lib.rs  main.rs  pickle.rs
tests/: test_pig_latinnify.py
