[package]
name = "polars-counter"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_counter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "abi3-py39",
    "multiple-pymethods",

] }
pyo3-polars = { version = "0.25.0", features = [
    "derive",
    "dtype-struct",
    "dtype-array",
] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.52.0", default-features = false }
polars-arrow = { version = "0.52.0", default-features = false }
serde-pickle = { version = "1.0.0" }
